presto/manifests/02-presto-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: presto
  labels:
    app: presto
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: http-coord
    name: http-coord
  selector:
    app: presto
