presto/manifests/04-presto-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.redirect: '{"Type": "redirect", "RedirectConfig":{"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:068920858268:certificate/f7944e01-f051-4d41-b69a-925e25ab9498
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/security-groups: sg-08a8f6c24cf68dea1
    alb.ingress.kubernetes.io/subnets: subnet-0bb36f1c26703b8a8,subnet-04427b406b3bc581e,subnet-01843df137e5c51d2
    alb.ingress.kubernetes.io/tags: scos.delete.on.teardown=true
    kubernetes.io/ingress.class: alb
  labels:
    app: presto
  name: presto
spec:
  backend:
    serviceName: presto
    servicePort: 8080
  rules:
  - host: presto.smrt-751.sandbox.internal.smartcolumbusos.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: redirect
          servicePort: use-annotation
